# DriftWatch

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dashboard.html  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
data/generator/: generate.py
data/generator/config/: base.yaml  drift_concept.yaml  drift_feature.yaml  shock_black_friday.yaml
docs/: LOGGING.md
infra/dashboard/: server.py
infra/grafana/provisioning/dashboards/: fraud_api.json
infra/prometheus/: prometheus.yml
services/api/: Dockerfile  main.py
services/common/: logging.py
services/control_plane/: Dockerfile  runner.py
services/control_plane/agents/: planner.py  release.py  sentinel.py
services/control_plane/policies/: promotion.yaml
services/monitoring/: Dockerfile  run_monitoring.py
services/training/: train.py
tests/: conftest.py  test_api.py  test_generator.py  test_monitoring.py  test_planner.py  test_sentinel.py  test_training.py
